--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "nodemon --inspect server.js",
-    "start": "node server.js"
+    "watch": "nodemon --inspect index.js",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
