--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "concurrently": "^3.5.0"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "concurrently": "^3.5.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
+    "http-errors": "^1.6.3",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.1.5"
   }
 }
