--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "concurrently \"nodemon --inspect --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
-    "install": "cd client && npm install",
+    "install": "node setup.js && cd client && npm install",
     "start": "node index.js",
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
